data/derived/sp14/progs/unify/prog2398.ml.out
Characters 303-315:
  | (h1::t1, h2::t2) -> pair (h1,h2)::acc t1 t2
                        ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list -> 'c list
       but an expression was expected of type 'c
       The type variable 'c occurs inside 'a list -> 'b list -> 'c list
